trunk/Archive2/7b/82177eae18156f/output
main.cpp:9:28: error: unknown template name 'function'
struct function1D : public function<T> {};
                           ^
1 error generated.
