trunk/Archive2/7b/82177eae18156f/main.cpp
#include <iostream>
#include <functional>
using namespace std; // LOOK HERE

template<typename T>
struct function {};

template<typename T>
struct function1D : public function<T> {};


int main()
{
    function1D<int> fnInt;
    std::cout << "OK\n";
}